--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,8 @@ body {
     background-color: black;
     font-family: darkSoulFont;
     color: white;
-    /* margin-left: -200px; */
+    margin-left: 100px;
+    margin-top: 50px;
     font-size: 30px;
     float: left;
 }
@@ -58,5 +59,5 @@ body {
 }
 
 #solar-gif {
-    
+
 }
